PROYECTO01 --> ORIGIN MASTER WAR (19/02/2014)

--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/busquedaavanzada.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/busquedaavanzada.properties
@@ -430,3 +430,6 @@ buscarCCP=Buscar Cargo :
 editarCargoModCargoPostularse=Cargo - Cargo 
 nomina=Nomina
 personal=Personal
+salir=Salir
+errorFormatoNumDocumento=El numero de documento no es valido.
+cancelar=Cancelar
