--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/configurarcolumna.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/configurarcolumna.properties
@@ -36,3 +36,5 @@ atencion=ATENCION!!!
 detalleConfiguracionD=Columnas Detalles
 descripcion=Descripcion
 errorNewColumna=No se puede agregar una nueva columna. El limite de columnas es 10
+salir=Salir
+cancelar=Cancelar
