--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciaafiliacion3.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciaafiliacion3.properties
@@ -103,3 +103,4 @@ seleccionarRegistro=Por favor seleccione un registro.
 errorObjetosDB=La tabla 'VIGENCIASAFILIACIONES' no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
 errorFechas=La fecha inicial es menor a 01/01/1900 y/o la fecha final es menor que la fecha inicial.
 duplicarR=Duplicar informaci\u00f3n para vigencias afiliaciones
+salir=Salir
