--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportelaboral.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportelaboral.properties
@@ -45,16 +45,16 @@ nombreC=Nombre
 #LOV Empleado Desde
 codigoEMP=Codigo Empleado Desde
 buscarEMP=Buscar Empleado: 
-codigooEMP=Codigo Empleado
-nombreEMP=Nombre Empleado
+codigooEMP=Codigo
+nombreEMP=Nombre
 #LOV Empleado Hasta
 codigoEMPH=Codigo Empleado Hasta
 buscarEMPH=Buscar Empleado: 
-codigooEMPH=Codigo Empleado
-nombreEMPH=Nombre Empleado
+codigooEMPH=Codigo
+nombreEMPH=Nombre
 #LOV EMPRESA
 empresaE=Empresa
-buscarE=Buscar Empresa
+buscarE=Buscar Empresa: 
 nitE=N.I.T
 nombreE=Nombre
 #Dialogo de Correos
@@ -107,3 +107,4 @@ infoReporteCodigoD=Codigo Reporte
 infoReporteNombreD=Nombre Reporte
 errorRegNew=Los campos Fecha Desde- Fecha Hasta- Empleado Desde - Empleado Hasta son obligatorios.
 errorFechas=La fecha hasta es menor a la fecha desde del parametro.
+salir=Salir
