PROYECTO01 --> ORIGIN MASTER  WAR (28/05/2014)

--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/personaindividual.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/personaindividual.properties
@@ -30,7 +30,7 @@ salir=Salir
 
 titulo=Ingreso Nuevo Personal
 infoBasica=Ingrese los datos basicos del empleado nuevo. Tenga en cuenta que la informacion que se solicitara en este formulario es basica para poder liquidar al trabajador. Si desea completar informacion adicional puede ingresar a Datos Personales despues de insertar al empleado.
-informacionPersona=Informacion Nueva Persona
+informacionPersona=Informacion Nuevo Empleado
 modPersonal=Informacion Personal
 modCargo=Cargo Desempe\u00f1ado
 modCentroCosto=Centro de Costo - Localizacion
@@ -38,3 +38,128 @@ modTipoTrabajador=Tipo Trabajador
 modTipoSalario=Tipo Salario (Reforma Laboral)
 modSueldo=Sueldo
 empresa=Empresa
+primerApellido=Primer Apellido
+segundoApellido=Segundo Apellido
+nombres=Nombres
+sexo=Genero
+masculino=MASCULINO
+femenino=FEMENINO
+tipoDocumento=Tipo Documento
+numeroIdentificacion=Numero Identificacion
+ciudadDocumento=Ciudad Documento
+fechaNacimiento=Fecha Nacimiento
+ciudadNacimiento=Ciudad Nacimiento
+fechaIngreso=Fecha de Ingreso
+codigoEmpleado=Codigo Empleado
+correoElectronico=Correo Electronico
+fechaUltimoPago=Fecha Ultimo Pago
+nombreCargo=Nombre del Cargo
+motivoCargo=Motivo del Cargo
+nombreEstructuraCargo=Nombre Estructura Cargo
+papelDesempe\u00f1ado=Papel Desempe\u00f1ado
+descripcionEstructura=Descripcion de la Estructura
+descripcionMotivo=Descripcion del Motivo
+empleadoJefe=Empleado Jefe
+tipoTrabajador=Tipo Trabajador
+tipoSalario=Tipo Salario
+valorSueldo=Valor Sueldo
+motivoSueldo=Motivo Sueldo
+tipoCompensacion=Tipo Compensacion
+unidadPago=Unidad de Pago
+modTipoContrato=Tipo Contrato
+motivoContrato=Motivo del Contrato
+tipoContrato=Tipo de Contrato
+fechaFinalContrato=Fecha Final Contrato
+modNormaLaboral=Norma Laboral
+normaLaboral=Nombre Norma Laboral
+modLegislacionLaboral=Legislacion Laboral
+legislacionLaboral=Nombre Legislacion Laboral
+modUbicacionGeografica=Ubicacion Geografica
+ubicacionGeografica=Ubicacion Geografica
+modJornadaLaboral=Jornada Laboral
+jornadaLaboral=Nombre Jornada
+modFormaPago=Forma de Pago
+formaPago=Nombre Forma de Pago
+cuentaPago=Cuenta de Pago
+tipoCuenta=Tipo Cuenta
+ahorros=AHORROS
+corriente=CORRIENTE
+sucursalPago=Sucursal de Pago
+metodoPago=Metodo de Pago
+modAfiliaciones=Afiliaciones
+eps=E.P.S.(Entidad Promotora de Salud)
+afp=A.F.P.(Aseguradora de Fondos de Pensiones)
+fondoCensantias=Fondo de Censantias
+arp=A.R.P.(Aseguradora de Riesgos Profesionales)
+cajaCompensacion=Caja de Compensacion
+camposOpcionales=Los siguientes campos son opcionales
+modFactorRH=Factor RH
+modEstadoCivil=Estado Civil
+modDireccion=Direccion
+modTelefono=Telefono
+grupoSanguineo=Grupo Sanguineo
+factorRH=Factor RH
+descripcion=Descripcion
+direccion=Direccion
+ciudad=Ciudad
+tipoTelefono=Tipo Telefono
+numeroTelefono=Numero Telefono
+empresaM=Empresas
+buscarEIP=Buscar Empresa: 
+nombreEmpresa=Nombre Empresa
+nitEmpresa=NIT Empresa
+tipoDocumentoM=Tipos Documentos
+buscarTDIP=Buscar Tipo Documento: 
+nombreCorto=Nombre Corto
+ciudadDocumentoM=Ciudades
+buscarCDIP=Buscar Ciudad: 
+departamento=Departamento
+ciudadNacimientoM=Ciudades
+buscarCNIP=Buscar Ciudad: 
+nombre=Nombre
+advertenciaFechaIngreso=La fecha de ingreso no se encuentra entre el periodo activo del usuario. Por favor, verifique los parametros de liquidacion del usuario o la fecha de ingreso antes de continuar.
+errorFechas=La fecha ingresada es menor al 01/01/1900
+editarEmpresaInformacionPersonal=Empresa Empleado
+editarPrimerApellidoInformacionPersonal=Primer Apellido Empleado
+editarSegundoApellidoInformacionPersonal=Segundo Apellido Empleado
+editarNombresInformacionPersonal=Nombres Empleado
+editarTipoDocumentoInformacionPersonal=Tipo Documento Empleado
+editarNumeroDocumentoInformacionPersonal=Numero Documento Empleado
+editarCiudadDocumentoInformacionPersonal=Ciudad Documento Empleado
+editarFechaNacimientoInformacionPersonal=Fecha Nacimiento Empleado
+editarCiudadNacimientoInformacionPersonal=Ciudad Nacimiento Empleado
+editarFechaIngresoInformacionPersonal=Fecha Ingreso Empleado
+editarCodigoEmpleadoInformacionPersonal=Codigo Empleado
+editarEmailInformacionPersonal=Email Empleado
+editarFechaUltimoPagoInformacionPersonal=Fecha Ultima de Pago
+cargoM=Cargos
+buscarCCD=Buscar Cargo: 
+motivoCambioCargoM=Motivos Cambios Cargos
+buscarMCCCD=Buscar Motivo: 
+nombreMotivoCargo=Nombre Motivo Cambio Cargo
+estructuraM=Estructuras
+buscarECD=Buscar Estructura: 
+nombreEstructura=Nombre Estructura
+papelM=Papeles
+buscarPCD=Buscar Papel: 
+nombrePapel=Nombre Papel
+editarCargoCargoDesempe\u00f1ado=Nombre del Cargo Desempe\u00f1ado
+editarMotivoCargoDesempe\u00f1ado=Motivo del Cargo Desempe\u00f1ado
+editarEstructuraCargoDesempe\u00f1ado=Nombre Estructura Cargo
+editarPapelCargoDesempe\u00f1ado=Papel Desempe\u00f1ado
+jefeM=Empleados
+buscarEJCD=Buscar Empleado: 
+empleado=Nombre Empleado
+editarEmpleadoJefeCargoDesempe\u00f1ado=Empleado Jefe 
+estructuraM2=Estructuras Centros Costos
+buscarECC=Buscar Estructura: 
+codigoCentroCosto=Codigo Centro Costo
+nombreCentroCosto=Nombre Centro Costo
+motivoLocalizacionM=Motivos Localizaciones
+buscarMLCC=Buscar Motivo: 
+editarEstructuraCentroCosto=Estructura Centro Costo
+editarMotivoCentroCosto=Motivo Centro Costo
+tipoTrabajadorM=Tipos Trabajadores
+buscarTTTT=Buscar Tipo Trabajador: 
+nombreTipoTrabajador=Nombre Trabajador
+editarTrabajadorTipoTrabajador=Nombre Tipo Trabajador
