--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciajornada.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciajornada.properties
@@ -121,3 +121,4 @@ refrescar= Refrescar
 errorFechas = La fecha de vigencia es menor a 01/01/1900.
 errorFechaDescanso=La fecha final es menor a la fecha inicial.
 errorNullDescanso=Los campos de fecha inicial y fecha final son obligatorios.
+salir=Salir
