--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciasueldo.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciasueldo.properties
@@ -69,22 +69,22 @@ sueldodelempleado=Sueldo del Empleado
 #Nuevo RegistroVS
 nuevoregistroVS=Nuevo Registro
 ingresarnuevoVS=Ingresar Nueva informaci\u00f3n del Empleado
-fechavigenciaVS=Fecha Vigencia: 
-motivocambiosueldoVS=Motivo Cambio Sueldo: 
-tiposueldoVS=Tipo Sueldo: 
+fechavigenciaVS=*Fecha Vigencia: 
+motivocambiosueldoVS=*Motivo Cambio Sueldo: 
+tiposueldoVS=*Tipo Sueldo: 
 retroactivoVS=Retroactivo: 
-vigenciaretroactivoVS=Vigencia Retroactivo: 
-valorVS=Valor: 
+vigenciaretroactivoVS=*Vigencia Retroactivo: 
+valorVS=*Valor: 
 observacionesVS=Observaciones: 
 #DuplicarRegistroVS
 duplicarregistroVS=Duplicar Registro
 #Nuevo Registro VA
 nuevoregistroVA=Nuevo Registro Vigencias Sueldos
 ingresarnuevaVA=Ingresar nueva informaci\u00f3n para vigencias sueldos
-fechainicialVA=Fecha Inicial: 
+fechainicialVA=*Fecha Inicial: 
 fechafinalVA=Fecha Final: 
-terceroVA=Tercero: 
-tipoentidadVA=Tipo Entidad: 
+terceroVA=*Tercero: 
+tipoentidadVA=*Tipo Entidad: 
 valorVA=Valor: 
 #DuplicarRegistroVA
 duplicarregistroVA=Duplicar Registro Vigencias Afiliaciones
