--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciatipotrabajador.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciatipotrabajador.properties
@@ -117,3 +117,4 @@ errorFechaVTT=La fecha vigencia es menor a 01/01/1900.
 errorRegRetiro=El campo fecha retiro es vacio y/o la observacion posee mas de 500 caracteres
 errorRegPensionado=El campo fecha inicial es vacio y/o el campo Clase Pension es vacio.
 errorRegNewVTT=Los campos Fecha Vigencia-Tipo Trabajador son obligatorios.
+salir=Salir
