--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplmvrs.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplmvrs.properties
@@ -123,3 +123,4 @@ errorRegNewMvr=Los campos Fecha Inicial-Motivo son obligatorios.
 errorFechas=La fecha inicial es nula y/o la fecha final es menor a la fecha inicial.
 errorRegNewOtro=Los campos Fecha Inicial-Fecha Final-Estado-Tipo Certificado son obligatorios.
 errorFechasOC=la fecha inicial es menor que la fecha final.
+salir=Salir
