--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/empleadoindividual.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/empleadoindividual.properties
@@ -121,7 +121,7 @@ errorTablaSinRastro=' no existe en RASTROSTABLAS, y no tiene registros asociados
 seleccionarRegistro=Por favor seleccione un campo.
 errorObjetosDB=' no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
 #SUBIR FOTO
-subirfotoempleado=Subir foto empleado
+subirfotoempleado=Cargar foto empleado
 nombrearchivo=Nombre del Archivo
 examinar=Examinar...
 #EXPORTAR
@@ -179,3 +179,4 @@ atras=Atras
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
 refrescar= Refrescar
+infCargueFoto=Por favor seleccione una imagen con extenci\u00f3n (.JPG) y con un tama\u00f1o no mayor a 300 KB.
