PROYECTO01 --> ORIGIN MASTER  WAR (06/06/2014)

--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/personaindividual.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/personaindividual.properties
@@ -163,3 +163,94 @@ tipoTrabajadorM=Tipos Trabajadores
 buscarTTTT=Buscar Tipo Trabajador: 
 nombreTipoTrabajador=Nombre Trabajador
 editarTrabajadorTipoTrabajador=Nombre Tipo Trabajador
+reformaLaboralM=Reformas Laborales
+buscarRLTS=Buscar Reforma: 
+nombreReformaLaboral=Nombre Reforma
+editarReformaTipoSalario=Nombre Tipo Salario
+motivoCambioSueldoM=Motivos Sueldos
+buscarMCSS=Buscar Motivo: 
+tipoSueldoM=Tipos Sueldos
+buscarTSS=Buscar Tipo Sueldo: 
+tipoSueldo=Descripcion Sueldo
+unidadM=Unidades
+buscarUS=Buscar Unidades: 
+nombreUnidad=Nombre Unidad Pago
+editarValorSueldo=Valor del Sueldo
+editarMotivoSueldo=Motivo de Sueldo
+editarTipoSueldoSueldo=Descripcion Tipo Sueldo
+editarUnidadSueldo=Unidad de Pago Sueldo
+errorValorSueldo=El valor del sueldo es menor a cero
+errorFormatoValorSueldo=El valor del sueldo es incorrecto
+motivoContratoM=Motivos Contratos
+buscarMCTC=Buscar Motivo: 
+tipoContratoM=Tipos Contratos
+buscarTCTC=Buscar Tipo Contrato: 
+editarMotivoTipoContrato=Nombre Motivo Contrato
+editarTipoTipoContrato=Nombre Tipo Contrato
+editarFechaTipoContrato=Fecha Final Contrato
+normaLaboralM=Normas Laborales
+buscarNLNL=Buscar Norma: 
+editarNormaNormaLaboral=Nombre Norma Laboral
+contratoM=Contratos
+buscarCLL=Buscar Contrato: 
+descripcionContrato=Descripcion Contrato
+editarContratoLegislacionLaboral=Nombre Legislacion Laboral
+ubicacionGeograficaM=Ubicaciones Geograficas
+buscarUGUGL=Buscar Ubicacion Geografica: 
+telefono=Telefono
+fax=Fax
+zona=Zona
+editarUbicacionUbicacionGeografica=Descripcion Ubicacion Geografica
+metodoPagoM=Metodos Pagos
+buscarMPFP=Buscar Metodo: 
+sucursalM=Sucursales
+periodicidadM=Periodicidades
+buscarPFP=Buscar Periodicidad: 
+buscarSFP=Buscar Sucursal: 
+editarPeriodicidadFormaPago=Nombre Forma Pago
+editarCuentaFormaPago=Numero Cuenta Pago
+editarSucursalFormaPago=Nombre Sucursal Pago
+editarMetodoFormaPago=Descripcion Metodo Pago
+jornadaLaboralM=Jornadas Laborales
+buscarJLJL=Buscar Jornada: 
+editarJornadaJornadaLaboral=Descripcion Jornada Laboral
+terceroM=Terceros Sucursales
+buscarTA=Buscar Tercero
+editarEPSAfiliacion=Descripcion Tercero EPS
+editarARPAfiliacion=Descripcion Tercero ARP
+editarAFPAfiliacion=Descripcion Tercero AFP
+editarFondoAfiliacion=Descripcion Tercero Fondo
+editarCajaAfiliacion=Descripcion Tercero Caja
+tercero=Tercero
+advertenciaEPS=\u00bf Esta totalmente seguro que el tercero seleccionado es considerado como una entidad EPS ?
+advertenciaAFP=\u00bf Esta totalmente seguro que el tercero seleccionado es considerado como una entidad AFP ?
+advertenciaARP=\u00bf Esta totalmente seguro que el tercero seleccionado es considerado como una entidad ARP ?
+estadoCivilM=Estados Civiles
+buscarECEC=Buscar Estado Civil: 
+editarEstadoEstadoCivil=Descripcion Estado Civil
+ciudadDireccionM=Ciudades
+buscarCD=Buscar Ciudad: 
+editarDireccionDireccion=Direccion
+editarCiudadDireccion=Nombre Ciudad
+ciudadTelefonoM=Ciudades
+buscarCT=Buscar Ciudad: 
+tipoTTelefonoM=Tipos Telefonos
+buscarTTT=Buscar Tipo Telefono: 
+editarTipoTelefonoTelefono=Nombre Tipo Telefono
+editarCiudadTelefono=Nombre Ciudad
+editarNumeroTelTelefono=Numero Telefonico
+errorNumeroTelefonico=El numero telefonico ingresado es incorrecto
+errorTopeEmpleadosEmpresa=\u00a1\u00a1\u00a1 Se ha superado el tope de empleados licenciados !!! Por favor contacte a su distribuidor.
+errorEmpleadoRegistrado=La cedula que digito ya existe como persona y empleado.
+errorPersonaRepetida=La cedula que digito ya existe solo como persona. Despues de ingresar este empleado favor verificar los datos laborales.
+errorCodigoTerceroPersona=\u00a1Esta ingresando un codigo de Tercero (nit de empleado) que no existe en el sistema contable. Por favor, antes de ingresar este registro en n\u00f3mina, valide primero con contabilidad!.
+errorIngresoTotalRegistro=\u00a1\u00a1\u00a1No se puede ingresar el registro en Designer.RHN!!! Por favor salga de esta pantalla.
+errorEmpleadoDuplicado=\u00a1El empleado ya existe!
+aletarTiposTrabajadoresTS=La combinacion para el tipo trabajador y tipo compensaci\u00f3n no es v\u00e1lida, por favor verifique este dato.
+aletarTiposTrabajadoresRL=La combinacion para el tipo trabajador y reforma laboral no es v\u00e1lida, por favor verifique este dato
+aletarTiposTrabajadoresTC=La combinacion para el tipo trabajador y tipo contrato no es v\u00e1lida, por favor verifique este dato.
+errorFechaContratoFechaIngreso=La fecha de terminacion del contrato no puede ser ni igual ni inferior a la fecha de inicio.
+aletarTiposTrabajadoresC=La combinacion para el tipo trabajador y legislaci\u00f3n laboral no es v\u00e1lida, por favor verifique este dato.
+aletarTiposTrabajadoresNL=La combinacion para el tipo trabajador y la norma laboral no es v\u00e1lida, por favor verifique este dato.
+errorCamposObligatorios=Los campos marcados con * son obligatorios. Por favor revise que estos campos no se encuentren vacios.
+procesoGuardadoOK=Los datos del nuevo empleado fueron guarados con exito
