--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/claseausentismo.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/claseausentismo.properties
@@ -50,11 +50,11 @@ seleccionarRegistro=Por favor seleccione un registro.
 errorObjetosDB=La tabla 'CLASESAUSENTISMOS' no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
 editarCodigo=Editar Codigo
 nuevoD=Nuevo Registro
-editarDescripcion=Editar Descripcion
-editarTipo=Editar Tipo
+editarDescripcion=Descripci\u00f3n
+editarTipo=Tipo Ausentismo
 nuevoDD=Agregar Nueva Clase Ausentismo
 codigoD=*Codigo:
-nombreD=*Nombre:
+nombreD=*Descripci\u00f3n:
 tipoD=*Tipo:
 #Add
 agregar=Agregar
@@ -65,3 +65,5 @@ duplicarDD=Duplicar Clase Ausentismo
 codigoE=Codigo
 descripcionE=Descripcion
 tipoE=Tipo
+#Exit
+salir=Salir
