--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/personaindividual.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/personaindividual.properties
@@ -215,7 +215,7 @@ jornadaLaboralM=Jornadas Laborales
 buscarJLJL=Buscar Jornada: 
 editarJornadaJornadaLaboral=Descripcion Jornada Laboral
 terceroM=Terceros Sucursales
-buscarTA=Buscar Tercero
+buscarTA=Buscar Tercero: 
 editarEPSAfiliacion=Descripcion Tercero EPS
 editarARPAfiliacion=Descripcion Tercero ARP
 editarAFPAfiliacion=Descripcion Tercero AFP
@@ -254,3 +254,4 @@ aletarTiposTrabajadoresC=La combinacion para el tipo trabajador y legislaci\u00f
 aletarTiposTrabajadoresNL=La combinacion para el tipo trabajador y la norma laboral no es v\u00e1lida, por favor verifique este dato.
 errorCamposObligatorios=Los campos marcados con * son obligatorios. Por favor revise que estos campos no se encuentren vacios.
 procesoGuardadoOK=Los datos del nuevo empleado fueron guarados con exito
+errorCamposAlternativos=Hay inconsistencia en los datos opcionales del empleado. Por favor verificar estos datos.
