--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/personaindividual.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/personaindividual.properties
@@ -253,5 +253,5 @@ errorFechaContratoFechaIngreso=La fecha de terminacion del contrato no puede ser
 aletarTiposTrabajadoresC=La combinacion para el tipo trabajador y legislaci\u00f3n laboral no es v\u00e1lida, por favor verifique este dato.
 aletarTiposTrabajadoresNL=La combinacion para el tipo trabajador y la norma laboral no es v\u00e1lida, por favor verifique este dato.
 errorCamposObligatorios=Los campos marcados con * son obligatorios. Por favor revise que estos campos no se encuentren vacios.
-procesoGuardadoOK=Los datos del nuevo empleado fueron guarados con exito
+procesoGuardadoOK=Los datos del nuevo empleado fueron guardados con exito
 errorCamposAlternativos=Hay inconsistencia en los datos opcionales del empleado. Por favor verificar estos datos.
