--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplubicaciongeografica.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplubicaciongeografica.properties
@@ -54,3 +54,14 @@ validacionNuevo=Para agregar una nueva ubicacion es necesario adicionar:
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
 refrescar= Refrescar
+#RASTRO
+confirmarRastro=La tabla 'VIGENCIASUBICACIONES' tiene rastros para el registro seleccionado, \u00bfdesea continuar?
+confirmarRastroHistorico=La tabla VIGENCIASUBICACIONES tiene rastros historicos, \u00bfDesea continuar?
+errorRastroHistorico=La tabla no tiene rastros historicos.
+errorRegistroRastro=El registro seleccionado no tiene rastros.
+errorTablaConRastro=La tabla no existe en RASTROSTABLAS, pero tiene registros asociados, \u00bfDesea continuar?
+errorTablaSinRastro=La tabla no existe en RASTROSTABLAS, y no tiene registros asociados.
+seleccionarRegistro=Por favor seleccione un registro.
+errorObjetosDB=La tabla no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
+salir=Salir
+fechaDuplicada=La fecha ya esta registrada, por favor ingrese otra.
