PROYECTO01 --> ORIGIN MASTER - WAR (10/06/2014)

--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/personaindividual.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/personaindividual.properties
@@ -255,3 +255,4 @@ aletarTiposTrabajadoresNL=La combinacion para el tipo trabajador y la norma labo
 errorCamposObligatorios=Los campos marcados con * son obligatorios. Por favor revise que estos campos no se encuentren vacios.
 procesoGuardadoOK=Los datos del nuevo empleado fueron guardados con exito
 errorCamposAlternativos=Hay inconsistencia en los datos opcionales del empleado. Por favor verificar estos datos.
+ingresarPersonal=Ingresar Nuevo Personal
