PROYECTO01 --> ORIGIN MASTER - WAR (11/06/2014)

--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/personaindividual.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/personaindividual.properties
@@ -256,3 +256,15 @@ errorCamposObligatorios=Los campos marcados con * son obligatorios. Por favor re
 procesoGuardadoOK=Los datos del nuevo empleado fueron guardados con exito
 errorCamposAlternativos=Hay inconsistencia en los datos opcionales del empleado. Por favor verificar estos datos.
 ingresarPersonal=Ingresar Nuevo Personal
+errorFechasEmpleado=Existe un error en alguna fecha del empleado. Por favor revisar para continuar con el proceso.
+infoAfiliacion=Para ingresar el campo Afiliacion es necesario ingresar primero la empresa.
+infoUbicacionUbicacion=Para ingresar el campo Ubicacion es necesario ingresar primero la empresa.
+infoLegislacionLegislacionLaboral=Para ingresar el campo Legislacion Laboral es necesario ingresar primero el tipo trabajador.
+infoContratoTipoContrato=Para ingresar el campo Tipo Contratol es necesario ingresar primero el tipo trabajador.
+infoNormaNormaLaboral=Para ingresar el campo Norma Laborall es necesario ingresar primero el tipo trabajador.
+infoSueldoSuelo=Para ingresar el campo Tipo Compensacion es necesario ingresar primero el tipo trabajador.
+infoSalarioTipoSalario=Para ingresar el campo Tipo Salario es necesario ingresar primero el tipo trabajador.
+infoEstructuraCentroCosto=Para ingresar el campo Estructura es necesario ingresar primero la empresa.
+infoEstructuraCargoDesempe\u00f1ado=Para ingresar el campo Estructura es necesario ingresar primero la empresa y la fecha de ingreso.
+informacion=Informaci\u00f3n
+operacionProceso=Operacion en proceso. Por favor espere...
