--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciatipocontrato.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciatipocontrato.properties
@@ -100,3 +100,4 @@ fispX=Fecha Inicio Proceso Sustitucion
 fispXX=Fecha_Inicio_Proceso_Sustitucion
 fispH=Fecha Sus.
 fifH=Fecha Flex.
+fechaDuplicada=La fecha ya esta registrada, por favor ingrese otra.
