--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/personaindividual.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/personaindividual.properties
@@ -247,7 +247,7 @@ errorCodigoTerceroPersona=\u00a1Esta ingresando un codigo de Tercero (nit de emp
 errorIngresoTotalRegistro=\u00a1\u00a1\u00a1No se puede ingresar el registro en Designer.RHN!!! Por favor salga de esta pantalla.
 errorEmpleadoDuplicado=\u00a1El empleado ya existe!
 aletarTiposTrabajadoresTS=La combinacion para el tipo trabajador y tipo compensaci\u00f3n no es v\u00e1lida, por favor verifique este dato.
-aletarTiposTrabajadoresRL=La combinacion para el tipo trabajador y reforma laboral no es v\u00e1lida, por favor verifique este dato
+aletarTiposTrabajadoresRL=La combinacion para el tipo trabajador y tipo salario no es v\u00e1lida, por favor verifique este dato
 aletarTiposTrabajadoresTC=La combinacion para el tipo trabajador y tipo contrato no es v\u00e1lida, por favor verifique este dato.
 errorFechaContratoFechaIngreso=La fecha de terminacion del contrato no puede ser ni igual ni inferior a la fecha de inicio.
 aletarTiposTrabajadoresC=La combinacion para el tipo trabajador y legislaci\u00f3n laboral no es v\u00e1lida, por favor verifique este dato.
@@ -268,3 +268,4 @@ infoEstructuraCentroCosto=Para ingresar el campo Estructura es necesario ingresa
 infoEstructuraCargoDesempe\u00f1ado=Para ingresar el campo Estructura es necesario ingresar primero la empresa y la fecha de ingreso.
 informacion=Informaci\u00f3n
 operacionProceso=Operacion en proceso. Por favor espere...
+nit=NIT
