--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplubicaciongeografica.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplubicaciongeografica.properties
@@ -65,3 +65,4 @@ seleccionarRegistro=Por favor seleccione un registro.
 errorObjetosDB=La tabla no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
 salir=Salir
 fechaDuplicada=La fecha ya esta registrada, por favor ingrese otra.
+fechaVacia=La fecha no puede ser vacia.
