PROYECTO01 --> ORIGIN MASTER - WAR (13/06/2014)

--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/empllegislacionlaboral.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/empllegislacionlaboral.properties
@@ -72,3 +72,6 @@ finalX=Fecha Final
 finalXX=Fecha_Final
 legislacionXX=Legislacion_Laboral
 tipocontratoXX=Tipo_Contrato
+legislacionlaboral=Legislacion Laboral
+errorFechas=La fecha inicial es menor a 01/01/1900 y/o la fecha final es menor a la fecha inicial.
+errorRegNew=Los campos Fecha Inicial-Legislacion Laboral son obligatorios.
