--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/personaindividual.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/personaindividual.properties
@@ -269,3 +269,4 @@ infoEstructuraCargoDesempe\u00f1ado=Para ingresar el campo Estructura es necesar
 informacion=Informaci\u00f3n
 operacionProceso=Operacion en proceso. Por favor espere...
 nit=NIT
+errorEmailPersona=El email ingresado es incorrecto.
