--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportenomina.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportenomina.properties
@@ -166,3 +166,4 @@ generandoReporte=Generando reporte, esto puede tardar algunos minutos...
 mensajeExitoReporte=Reporte generado con exito.
 descargar=Descargar
 errorReporte=Error generando el reporte
+envioLote=Envio de lotes para el envio de gestion documental.
