--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/ciudades.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/ciudades.properties
@@ -38,8 +38,8 @@ refrescar= Refrescar
 nuevoregistro= Nuevo Registro
 ingresarnuevo= Agregar nueva ciudad
 codigoN=Codigo: 
-nombreN=Nombre de la Ciudad: 
-departamentooN=Departamento: 
+nombreN=*Nombre de la Ciudad: 
+departamentooN=*Departamento: 
 codigoalternativoN=Codigo Alternativo: 
 #DuplicarRegistro
 duplicarregistro= Duplicar Ciudad
@@ -63,3 +63,4 @@ noombre=Nombre
 departamentos=Departamentos
 #Validacion
 nombreVacio=El nombre de una ciudad no puede ser vacio
+salir=Salir
