PROYECTO01--> ORIGIN MASTER WAR 18-06-2014

--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/cargo.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/cargo.properties
@@ -182,4 +182,4 @@ errorDescripcionTipoDetalle=El campo Descripcion es mayor a 40 caracteres.
 ingresoNuevoDetalleCargo=\u00bfDesea crear el registro del detalle de cargo?
 errorBorradoCargo=Para eliminar el Cargo es necesario que no tenga registros Detalles del Cargo asociados.
 buscarCargoD=Cargos
-buscarBC=Buscar Cargo;
+buscarBC=Buscar Cargo: 
