--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/conceptojuridico.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/conceptojuridico.properties
@@ -64,3 +64,16 @@ errorTablaConRastro=La tabla no existe en RASTROSTABLAS, pero tiene registros as
 errorTablaSinRastro=La tabla no existe en RASTROSTABLAS, y no tiene registros asociados.
 seleccionarRegistro=Por favor seleccione un registro.
 errorObjetosDB=La tabla no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
+#Toolbar
+guardar=Guardar
+editar=Editar
+lista=Lista de Valores
+filtrar=Activar Filtrado
+xls=Exportar a XLS
+xml=Exportar a XML
+pdf=Exportar a PDF
+nuevo=Nuevo Registro
+eliminar=Borrar Registro
+duplicar=Duplicar Registro
+rastro=Rastro
+salir=Salir
