--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/escalafon.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/escalafon.properties
@@ -68,3 +68,4 @@ errorTablaSinRastro=La tabla no existe en RASTROSTABLAS, y no tiene registros as
 seleccionarRegistro=Por favor seleccione un registro.
 errorObjetosDB=La tabla 'ESCALAFONES' no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
 errorRegNew=Los campos Codigo - Categoria - SubCategoria son obligatorios.
+salir=Salir
