--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/estructuraplanta.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/estructuraplanta.properties
@@ -99,3 +99,4 @@ errorTablaSinRastro=La tabla no existe en RASTROSTABLAS, y no tiene registros as
 seleccionarRegistro=Por favor seleccione un registro.
 errorObjetosDB=La tabla no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
 errorCodigo=El codigo registrado ya se encuentra en uso por otro registro.
+salir=Salir
