--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportebienestar.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportebienestar.properties
@@ -92,3 +92,4 @@ infoReporteCodigoD=Codigo Reporte
 infoReporteNombreD=Nombre Reporte
 errorRegNew=Los campos Fecha Desde- Fecha Hasta- Empleado Desde - Empleado Hasta son obligatorios.
 errorFechas=La fecha hasta es menor a la fecha desde del parametro.
+salir=Salir
