--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportelaboral.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportelaboral.properties
@@ -108,3 +108,6 @@ infoReporteNombreD=Nombre Reporte
 errorRegNew=Los campos Fecha Desde- Fecha Hasta- Empleado Desde - Empleado Hasta son obligatorios.
 errorFechas=La fecha hasta es menor a la fecha desde del parametro.
 salir=Salir
+mostrarTodos=Mostrar todos los reportes
+buscarReporte=Buscar Reportes.
+generarReporte=Generar Reporte.
