--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportenomina.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportenomina.properties
@@ -167,3 +167,7 @@ mensajeExitoReporte=Reporte generado con exito.
 descargar=Descargar
 errorReporte=Error generando el reporte
 envioLote=Envio de lotes para el envio de gestion documental.
+mostrarTodos=Mostrar todos los reportes.
+buscarReporte=Buscar Reportes.
+generarReporte=Generar Reporte.
+salir=Salir
