--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/tipocontrato.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/tipocontrato.properties
@@ -122,3 +122,4 @@ headerVE=Vinculacion Empresa
 headerForza=Forza Cotizacion Pila
 headerHL=Horas Laborables
 errorCodigoClonado=El codigo nuevo ya existe.
+salir=Salir
