--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/tiposueldo.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/tiposueldo.properties
@@ -138,3 +138,4 @@ teFormula=Tipos Entidades Distrib.
 codigoTE=Codigo
 nombreTE=Nombre
 errorNuevoRegistroTEFormula=Ya se registro un Tipo Entidad con la Empresa seleccionada.
+salir=Salir
