--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportepersonal.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportepersonal.properties
@@ -174,3 +174,7 @@ infoReporteCodigoD=Codigo Reporte
 infoReporteNombreD=Nombre Reporte
 errorRegNew=Los campos Fecha Desde- Fecha Hasta- Empleado Desde - Empleado Hasta son obligatorios.
 errorFechas=La fecha hasta es menor a la fecha desde del parametro.
+mostrarTodos=Mostrar todos los reportes.
+buscarReporte=Buscar Reportes.
+generarReporte=Generar Reporte.
+salir=Salir
