--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/idiomapersona.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/idiomapersona.properties
@@ -68,3 +68,5 @@ validacionNuevo=Para agregar un nuevo idioma es necesario adicionar:
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
 refrescar= Refrescar
+salir=Salir
+errorRegNull=El campo Idioma es obligatorio.
