--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/formula.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/formula.properties
@@ -25,7 +25,7 @@ p=P
 buscar=Buscar Formula
 mostrar=Mostrar Todos
 #Clonar Formula
-ncnlyo=Nombre corto, nombre largo y observaci\u00f3n de la nueva formula: 
+ncnlyo=Nombre corto, nombre largo y observaci\u00f3n de la nueva formula
 fac=Formula a Clonar: (Utilice lista de Valores)
 clonarboton=[Clonar]
 #Propiedades
@@ -95,3 +95,5 @@ validacionNuevo=Para agregar una nueva formula es necesario adicionar:
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
 refrescar= Refrescar
+textP=Indica si la periodicidad es independiente
+salir=Salir
