--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/concepto.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/concepto.properties
@@ -143,3 +143,5 @@ estadoX=Estado
 enviaraX=Envio_Tesoreria
 codigoalternativoX=C\u00f3digo_Alternativo
 detalle=Detalles del concepto seleccionado
+salir=Salir
+textI=Independiente para el envio a tesoreria
