--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/legislacion.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/legislacion.properties
@@ -81,3 +81,4 @@ cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
 refrescar= Refrescar
 detalle=Detalle de la formula asociada a la legislacion seleccionada
+salir=Salir
