--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/proyecto.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/proyecto.properties
@@ -122,4 +122,6 @@ errorTablaSinRastro=La tabla no existe en RASTROSTABLAS, y no tiene registros as
 seleccionarRegistro=Por favor seleccione un registro.
 errorObjetosDB=La tabla 'PROYECTOS' no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
 #Dialogo
-errorFechas=Error fechas
+errorFechas=la fecha inicial es menor a 01/01/1900 y/o la fecha final es menor que la fecha inicial
+salir=Salir
+errorDatosNull=Los campos Codigo - Nombre Proyecto son obligatorios.
