--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/gruposalarial.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/gruposalarial.properties
@@ -73,3 +73,5 @@ cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
 refrescar= Refrescar
 errorRegNew = Los campos Fecha Vigencia y Valor son obligatorios
+salir=Salir
+errorRegDescripcion=El campo descripcion es obligatorio.
