--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/atextrarecargo.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/atextrarecargo.properties
@@ -171,3 +171,13 @@ errorTablaConRastro=La tabla no existe en RASTROSTABLAS, pero tiene registros as
 errorTablaSinRastro=La tabla no existe en RASTROSTABLAS, y no tiene registros asociados.
 seleccionarRegistro=Por favor seleccione un registro.
 errorObjetosDB=La tabla no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
+textA=Aprobacion Automatica
+textT=Turno
+textG=Garantiza Adicional
+textAdicional=Adicional Inicio/Fin de la Jornada
+textC=Paga el tiempo adicional de este registro
+textM=Minima cantidad de minutos a pagar
+textA2=Adiciona el turno
+textHI=Hora Inicial
+textHF=Hora Final
+salir=Salir
