--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/auxtipoauxilio.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/auxtipoauxilio.properties
@@ -58,3 +58,4 @@ validacionNuevo=Para agregar un nuevo ausentismo es necesario adicionar:
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
 refrescar= Refrescar
+salir=Salir
