--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/barra.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/barra.properties
@@ -20,10 +20,18 @@ cancelar=Cancelar
 detalles=[Detalles de Liquidaci\u00f3n]
 errores=[Errores]
 #Toolbar
+guardar=Guardar
+editar=Editar
+lista=Lista de Valores
 filtrar=Activar Filtrado
 xls=Exportar a XLS
 xml=Exportar a XML
 pdf=Exportar a PDF
+nuevo=Nuevo Registro
+eliminar=Borrar Registro
+duplicar=Duplicar Registro
+rastro=Rastro
+salir=Salir
 #Derecha
 consultar=Consultar Datos
 liquidacionescerradas=Liquidaciones cerradas
