--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/detalleempresa.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/detalleempresa.properties
@@ -273,3 +273,4 @@ nuevaTapInfoGerencial=Informacion de Gerencia
 nuevaTapInfoJuridica=Informacion Juridica
 nuevaTapDatosBasicos=Datos Basicos
 camposNecesarios=Los campos con * son obligatorios.
+salir=Salir
