--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplcomprobante.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplcomprobante.properties
@@ -134,3 +134,13 @@ terceroX=Nombre_del_Tercero
 fechapagoX=Fecha_Pago
 fechapago=Fecha Pago
 salir=Salir
+cuentaDebitoM=Cuentas Debito
+buscarCD=Buscar Cuenta: 
+cuentaCreditoM=Cuentas Credito
+buscarCC=Buscar Cuenta: 
+centroCostoDebitoM=Centros Costos
+buscarCCD=Buscar Centro Costo: 
+centroCostoCreditoM=Centros Costos
+buscarCCC=Buscar Centro Costo: 
+textTT=Indique si el comprobante fue entregado y/o pagado fisicamente al empleado
+entregadoC=\u00bfEntregado a empleado?:
