--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/empresa.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/empresa.properties
@@ -149,4 +149,5 @@ editarOrigenClonadoD=Nombre Empresa Destino
 editarDestinoClonadoD=Nombre Empresa Origen
 detalle=[Detalle Empresa]
 empresaBanco=[Empresa - Banco]
-direccion=Direccion Empresa
+direccion=[Firmas Reportes]
+salir=Salir
