--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/estructura.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/estructura.properties
@@ -10,9 +10,9 @@ filtrar=Activar Filtrado
 xls=Exportar a XLS
 xml=Exportar a XML
 pdf=Exportar a PDF
-nuevo=Nuevo Organigrama
-eliminar=Borrar Ogranigrama
-duplicar=Duplicar Organigrama
+nuevo=Nuevo Registro
+eliminar=Borrar Registro
+duplicar=Duplicar Registro
 rastro=Rastro
 #Tabla
 fecha=Fecha
@@ -31,7 +31,7 @@ nitEM=N.I.T
 nombreEM=Nombre
 #Nuevo Registro
 nuevoregistro=Nuevo Registro
-ingresarnuevo=Crear Organigrama
+ingresarnuevo=Ingresar Informaci\u00f3n del Organigrama
 fechaN=Fecha: 
 codigoN=Codigo: 
 empresaN=Empresa: 
@@ -70,3 +70,13 @@ validacionNuevo=Para agregar un nuevo orgranigrama es necesario adicionar:
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
 refrescar= Refrescar
+#RASTRO
+confirmarRastro=La tabla 'ORGANIGRAMAS' tiene rastros para el registro seleccionado, \u00bfdesea continuar?
+confirmarRastroHistorico=La tabla ORGANIGRAMAS tiene rastros historicos, \u00bfDesea continuar?
+errorRastroHistorico=La tabla no tiene rastros historicos.
+errorRegistroRastro=El registro seleccionado no tiene rastros.
+errorTablaConRastro=La tabla no existe en RASTROSTABLAS, pero tiene registros asociados, \u00bfDesea continuar?
+errorTablaSinRastro=La tabla no existe en RASTROSTABLAS, y no tiene registros asociados.
+seleccionarRegistro=Por favor seleccione un registro.
+errorObjetosDB=La tabla 'ORGANIGRAMAS' no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
+salir=Salir
