--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/ibcautoliquid.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/ibcautoliquid.properties
@@ -77,3 +77,4 @@ errorRegNew= Los campos Fecha Inicial-Valor son obligaorios.
 errorFechas=La fecha inicial es nula y/o la fecha final es menor que la fecha inicial.
 codigo=Codigo
 nombre=Nombre
+salir=Salir
