--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/novedadplano.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/novedadplano.properties
@@ -123,3 +123,43 @@ cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
 refrescar= Refrescar
 errores=ERRORES: 
 reversarcarguenovedades=Reversar Cargue Novedades
+#Toolbar
+guardar=Guardar
+editar=Editar
+lista=Lista de Valores
+filtrar=Activar Filtrado
+xls=Exportar a XLS
+xml=Exportar a XML
+pdf=Exportar a PDF
+nuevo=Nuevo Registro
+eliminar=Borrar Registro
+duplicar=Duplicar Registro
+rastro=Rastro
+conceptoX=Concepto
+empleadoX=Empleado
+fechaIniciallX=Fecha_Inicial
+fechaFinalX=Fecha_Final
+fechaReporteX=Fecha_Reporte
+documentoSoporteXX=Documento_Soporte
+documentoSoporteX=Documento Soporte
+valortotalXX=Valor_Total
+valortotalX=Valor Total
+periodicidadX=Periodicidad
+terceroX=Tercero
+saldoX=Saldo
+unidadesEnteraXX=Unidades_Enteras
+unidadesEnteraX=Unidades Enteras
+unidadesFraccionXX=Unidades_Fraccionadas
+unidadesFraccionX=Unidades Fraccionadas
+editarConcepto=Concepto
+editarEmpleado=Empleado
+editarFechainicial=Fecha Inicial
+editarFechaFinal=Fecha Final
+editarFechaReporte=Fecha Reporte
+editarDocumentoS=Documento Soporte
+editarValor=Valor
+editarPeriodicidad=Periodicidad
+editarTercero=Tercero
+editarSaldo=Saldo
+editarUEntera=Unidad Entera
+editarUFraccion=Unidad Fraccion
