--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportescontabilidad.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportescontabilidad.properties
@@ -90,3 +90,4 @@ infoReporteNombreD=Nombre Reporte
 errorRegNew=Los campos Fecha Desde- Fecha Hasta- Empleado Desde - Empleado Hasta son obligatorios.
 errorFechas=La fecha hasta es menor a la fecha desde del parametro.
 salir=Salir
+generarReporte=Generar Reporte
