--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/parametro.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/parametro.properties
@@ -14,6 +14,11 @@ filtrar=Activar Filtrado
 xls=Exportar a XLS
 xml=Exportar a XML
 pdf=Exportar a PDF
+nuevo=Nuevo Registro
+eliminar=Borrar Registro
+duplicar=Duplicar Registro
+rastro=Rastro
+salir=Salir
 #Arriba
 fechadesde=Fecha Desde: 
 fechahasta=Fecha Hasta: 
