--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/perexperiencialaboral.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/perexperiencialaboral.properties
@@ -59,7 +59,7 @@ buscarM=Buscar Motivo:
 nombre=Nombre
 errorBorradoReg=Es necesario que el campo LOGROS ALCANZADOS se encuentre vacio.
 errorIngresoReg=Los campos fecha ingreso - sector economicos son obligatorios.
-errorFechasIngresoReg=La fecha retiro es menor que la fecha ingreso
+errorFechasIngresoReg=La fecha retiro es menor que la fecha ingreso y/o la fecha de ingreso es vacia
 logroAlcanzadoN=Logro Alcanzado: 
 motivoRetiroN=Motivo Retiro: 
 sectorEconomicoN=Sector Economico: 
