--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/cerrarliquidacion.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/cerrarliquidacion.properties
@@ -35,3 +35,19 @@ validacionNuevo=Para agregar un nuevo ausentismo es necesario adicionar:
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
 refrescar= Refrescar
+#Toolbar
+guardar=Guardar
+editar=Editar
+lista=Lista de Valores
+filtrar=Activar Filtrado
+xls=Exportar a XLS
+xml=Exportar a XML
+pdf=Exportar a PDF
+nuevo=Nuevo Registro
+eliminar=Borrar Registro
+duplicar=Duplicar Registro
+rastro=Rastro
+salir=Salir
+nombreEmpleadoXX=Nombre_Empleado
+nombreEmpleadoX=Nombre Empleado
+codigoX=Codigo
