--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/escalafonsalarial.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/escalafonsalarial.properties
@@ -85,3 +85,4 @@ errorTablaConRastro=La tabla no existe en RASTROSTABLAS, pero tiene registros as
 errorTablaSinRastro=La tabla no existe en RASTROSTABLAS, y no tiene registros asociados.
 seleccionarRegistro=Por favor seleccione un registro.
 errorObjetosDB=La tabla no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
+salir=Salir
